Back to VSCode Commit

--- a/pokemon_table/pokemon_table_exercise.html
+++ b/pokemon_table/pokemon_table_exercise.html
@@ -33,7 +33,7 @@
 				</tr>
 				<tr>
 					<td>Squirtle</td>
-					<td><img src="http://img1.wikia.nocookie.net/__cb20140328191525/pokemon/images/thumb/3/39/007Squirtle.png/200px-007Squirtle.png" alt="Picture of Squirtle"></td>
+					<td>src="http://img1.wikia.nocookie.net/__cb20140328191525/pokemon/images/thumb/3/39/007Squirtle.png/200px-007Squirtle.png" alt="Picture of Squirtle"></td>
 					<td>Water</td>
 					<td><a href="http://pokemon.wikia.com/wiki/Wartortle">Wartortle</a></td>
 				</tr>
