--- a/First_Js_Exercise/page.html
+++ b/First_Js_Exercise/page.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <script charset="utf-8" src="script.js"></script>>
+        <script type="text/javascript" src="script.js"></script>
         <title>Script Demo</title>
     </head>
     <body>
